--- a/src/components/ui/Slider/Slider.module.scss
+++ b/src/components/ui/Slider/Slider.module.scss
@@ -139,8 +139,8 @@
   color: var(--color-brown-medium);
   cursor: pointer;
   transition:
-    background-color 0.2s ease,
-    color 0.2s ease;
+    background-color 0.3s ease,
+    color 0.3s ease;
 
   svg {
     width: 100%;
